fix horizontal scroll

--- a/src/css/sections/response.css
+++ b/src/css/sections/response.css
@@ -264,6 +264,7 @@
 @media screen and (max-width: 575px) {
   .specialization {
     width: 100%;
+    overflow: hidden;
   }
 
 }
